# clean-chat

./: README.md  docker-compose.dev.yml
clean-chat-back/: .dockerignore  .env.template  .gitignore  Dockerfile  database.py  dev-run.sh  docker-compose.dev.yml  main.py  pyproject.toml  utils.py
clean-chat-back/alembic/: env.py
clean-chat-back/alembic/versions/: 18e69f100c38_restrict_to_one_channel.py  5bbeee1877f8_fixed_editied_field_in_messages.py  a35acc246c5b_init_db.py
clean-chat-back/auth/: routes.py  utils.py
clean-chat-back/auth/dto/: login.py  user.py  users.py
clean-chat-back/auth/guard/: jwt.py
clean-chat-back/auth/models/: user.py
clean-chat-back/auth/repos/: user_repo.py
clean-chat-back/auth/schemas/: login.py  registration.py  update_config.py
clean-chat-back/auth/services/: token.py  user.py
clean-chat-back/auth/utils/: password.py
clean-chat-back/chat/: enums.py  routes.py
clean-chat-back/chat/dto/: channel.py  channels.py  message.py  messages.py  ws_add_user_to_channel.py  ws_base.py  ws_deleted_message.py  ws_edit_message.py  ws_new_message.py  ws_new_type.py  ws_remove_user_from_channel.py
clean-chat-back/chat/models/: channel.py  message.py  user_channels.py
clean-chat-back/chat/repos/: channel.py  message.py
clean-chat-back/chat/schemas/: add_channel.py  add_message.py  add_user_to_channel.py  edit_message.py
clean-chat-back/chat/services/: channel.py  chat_ws.py  message.py
clean-chat-back/chat/ws/: chat_manager.py
clean-chat-back/core/: common_queries.py  order.py  singleton.py
clean-chat-back/ml/: tasks.py
(+35 files in other folders)
